--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
     "dotenv": "^10.0.0",
     "nodemailer": "^6.6.3",
     "pg": "^8.7.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.24.2"
   }
 }
